Fixed alignment

--- a/src/app/user/browse-item-details/item-details/item-details.component.scss
+++ b/src/app/user/browse-item-details/item-details/item-details.component.scss
@@ -55,4 +55,6 @@ button, .price , .title{
   width:450px;
 }
 
-
+.recommended{
+  padding-left: 0px;
+}
